--- a/.editorconfig
+++ b/.editorconfig
@@ -1,11 +1,15 @@
 root = true
 
 [*]
-charset = utf-8
-indent_size = 4
-indent_style = space
 end_of_line = lf
 insert_final_newline = true
-
-[*.{js,html,css,java,groovy,xml,json,apt,go,yml,yaml}]
+charset = utf-8
+indent_style = space
+indent_size = 4
 trim_trailing_whitespace = true
+
+[Makefile]
+indent_style = tab
+
+[*.cmd]
+end_of_line = crlf
